[project]
name = "repl-nix-tithetracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "jose>=1.0.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.3.0",
    "streamlit>=1.40.2",
]
